# healthcare-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
.langgraph_api/: .langgraph_ops.pckl
scripts/: run_with_microphone.py
src/agents/health_agent/: main.py  state.py
src/agents/health_agent/nodes/microphone/: __init__.py  node.py
src/agents/health_agent/nodes/patient_data_extractor/: __init__.py  node.py  prompt.py
src/agents/health_agent/nodes/referrer/: __init__.py  dataset.py  node.py  prompt.py
src/agents/health_agent/nodes/symptom_extractor/: __init__.py  node.py  prompt.py
src/agents/health_agent/nodes/transcriptor/: __init__.py  capture.py  node.py  prompt.py
