[project]
name = "healthcare-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "langchain>=1.3.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.5",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.29",
]
